Lab_02 updated version with fixed smells